[metadata]
name = ppgen
version = attr: ppgen.__version__
description =
    A passphrase generation module and command.
long_description = file: README, COPYING
keywords = passphrase, password, generation, security
license = Public Domain

[options]
py_modules =
    ppgen
python_requires =
    >= "3.7"

[options.entry_points]
console_scripts =
    ppgen = ppgen:main
